--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.13",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
